# minfalc

./: .gitignore  CLAUDE.md  ERRORS.md  MEMORY.md  README.md  bench.sh  bench_results_ed25519_20260514_155446.csv  bench_results_falcon512_20260514_154918.csv  bench_summary.html  docker-compose.yml
fedimint-src/: Cargo.toml  Dockerfile  NEXT.md
fedimint-src/.cargo/: config.toml
fedimint-src/bench/dashboard/: Cargo.toml
fedimint-src/bench/dashboard/src/: main.rs
fedimint-src/bench/spammer/: Cargo.toml
fedimint-src/bench/spammer/src/: main.rs
fedimint-src/devimint/src/: external.rs  util.rs
fedimint-src/docker/hellas-falcon/: Dockerfile.client  Dockerfile.guardian  docker-compose.yml  guardian-entrypoint.sh
fedimint-src/fedimint-client-module/src/: meta.rs
fedimint-src/fedimint-client-module/src/transaction/: sm.rs
fedimint-src/fedimint-core/: Cargo.toml
fedimint-src/fedimint-core/src/: transaction.rs
fedimint-src/fedimint-core/src/module/: mod.rs
fedimint-src/fedimint-load-test-tool/src/: common.rs
fedimint-src/fedimint-server-ui/src/dashboard/: consensus_explorer.rs
fedimint-src/fedimint-server/src/consensus/: engine.rs  transaction.rs
fedimint-src/fedimintd/: Cargo.toml
fedimint-src/fedimintd/src/: lib.rs
fedimint-src/gateway/fedimint-gateway-client/src/: general_commands.rs
fedimint-src/gateway/fedimint-gateway-server/src/: lib.rs
fedimint-src/gateway/integration_tests/src/: main.rs
fedimint-src/gatewayd-startos/: LICENSE  README.md  check-web.sh  docker_entrypoint.sh  instructions.md  manifest.yaml
fedimint-src/gatewayd-startos/scripts/: constants.ts
fedimint-src/gatewayd-startos/scripts/procedures/: getConfig.ts  migrations.ts  setConfig.ts
fedimint-src/modules/fedimint-dummy-server/src/: lib.rs
fedimint-src/modules/fedimint-falcon-client/: Cargo.toml
fedimint-src/modules/fedimint-falcon-client/src/: lib.rs
fedimint-src/modules/fedimint-falcon-common/: Cargo.toml
fedimint-src/modules/fedimint-falcon-common/src/: config.rs  lib.rs
fedimint-src/modules/fedimint-falcon-server/: Cargo.toml
fedimint-src/modules/fedimint-falcon-server/src/: db.rs  lib.rs
fedimint-src/modules/fedimint-ln-client/src/: lib.rs  pay.rs  receive.rs
fedimint-src/modules/fedimint-ln-server/src/: lib.rs
fedimint-src/modules/fedimint-lnv2-client/src/: events.rs
fedimint-src/modules/fedimint-lnv2-server/src/: lib.rs
fedimint-src/modules/fedimint-meta-client/src/: lib.rs
fedimint-src/modules/fedimint-mint-server/src/: lib.rs
fedimint-src/modules/fedimint-mintv2-server/src/: lib.rs
fedimint-src/modules/fedimint-wallet-client/src/: deposit.rs  pegin_monitor.rs
fedimint-src/modules/fedimint-wallet-server/src/: lib.rs
fedimint-src/modules/fedimint-walletv2-common/src/: lib.rs
fedimint-src/modules/fedimint-walletv2-server/src/: lib.rs
