[package]
authors = { workspace = true }
description = "Live ratatui metrics dashboard for hellas-falcon-bench"
edition = { workspace = true }
license = { workspace = true }
name = "falcon-dashboard"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[[bin]]
name = "falcon-dashboard"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
hex = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
